[project]
name = "unittest-observability"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Christian Ekiza", email = "ekiza23@gmail.com" },
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]